# src/main/resources/openapi/documentation.yaml
@@ -149,6 +149,42 @@ paths:
   /invoices:
     # Get Invoices
     # Add Invoice
+    post:
+      description: "Route to add an invoice"
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: "#/components/schemas/Invoice"
+        required: true
+      responses:
+        "201":
+          description: "Created"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Invoice added successfully."
+        "500":
+          description: "Internal Server Error"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Failed to add invoice."
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Invalid data format."
   /partners:
     post:
       description: "Route to add a partner"
